[project]
name = "agentic-rag-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.9.0",
    "argcomplete==3.6.2",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "boto3==1.37.31",
    "botocore==1.37.31",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cohere==5.14.2",
    "colorama==0.4.6",
    "crawl4ai==0.5.0.post8",
    "cryptography==44.0.2",
    "cssselect==1.3.0",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "eval-type-backport==0.2.2",
    "executing==2.2.0",
    "fake-http-header==0.3.5",
    "fake-useragent==2.1.0",
    "fastavro==1.10.0",
    "faust-cchardet==2.1.19",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.38.0",
    "googleapis-common-protos==1.69.2",
    "greenlet==3.1.1",
    "griffe==1.7.2",
    "groq==0.22.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "humanize==4.12.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "litellm==1.65.4.post1",
    "logfire==3.13.1",
    "logfire-api==3.13.1",
    "lxml==5.3.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mcp==1.6.0",
    "mdurl==0.1.2",
    "mistralai==1.6.0",
    "multidict==6.4.2",
    "narwhals==1.34.1",
    "nltk==3.9.1",
    "numpy==2.2.4",
    "openai==1.72.0",
    "opentelemetry-api==1.32.0",
    "opentelemetry-exporter-otlp-proto-common==1.32.0",
    "opentelemetry-exporter-otlp-proto-http==1.32.0",
    "opentelemetry-instrumentation==0.53b0",
    "opentelemetry-proto==1.32.0",
    "opentelemetry-sdk==1.32.0",
    "opentelemetry-semantic-conventions==0.53b0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pip-tools==7.4.1",
    "playwright==1.51.0",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "psycopg-binary==3.2.6",
    "psycopg-pool==3.2.6",
    "psycopg[binary,pool]==3.2.6",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-ai==0.0.55",
    "pydantic-ai-slim[anthropic,bedrock,cli,cohere,evals,groq,mcp,mistral,openai,vertexai]==0.0.55",
    "pydantic-core==2.33.1",
    "pydantic-evals==0.0.55",
    "pydantic-graph==0.0.55",
    "pydantic-settings==2.8.1",
    "pydeck==0.9.1",
    "pyee==12.1.1",
    "pygments==2.19.1",
    "pyopenssl==25.0.0",
    "pyperclip==1.9.0",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "rsa==4.9",
    "s3transfer==0.11.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "soupsieve==2.6",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "streamlit==1.44.1",
    "tenacity==9.1.2",
    "tf-playwright-stealth==1.1.2",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "types-requests==2.32.0.20250328",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.19.0",
    "zipp==3.21.0",
]
